                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 22-06-2006 fixed: jitter in spc codec. also updated dll to v3.0.
 - 22-06-2006 fixed: Nicer display of weather setting codes.
 - 22-06-2006 fixed: Navigation when no controls are visible could cause infinite loops.
 - 21-06-2006 changed: switched to async exception handling to allow logging/handling of win32 exceptions. (potentially slower due to less compiler optimizations)
 - 21-06-2006 fixed: [ 1505563 ] Paplayer plays at very slow rate
 - 21-06-2006 fixed: restored &#10; (newline chars) in english language
 - 21-06-2006 fixed: weather isn't localized anymore
 - 21-06-2006 fixed: "Look for custom thumbnails on remote shares" setting was ignored.
 - 21-06-2006 fixed: My music - autoswitch to thumb didn't work with one folder and parent folder items hidden.
 - 21-06-2006 fixed: Network and local buttons in My Pictures now work in 16x9 too
 - 21-06-2006 changed: Some minor fixes/changes to the swedish strings.xml langinfo.xml
 - 21-06-2006 fixed: temp and speed units do not display properly
 - 21-06-2006 added: Canadian region to the english language (Thanks to Midvalley)
 - 21-06-2006 fixed: <colordiffuse> didn't work for multiimage.
 - 21-06-2006 fixed: Speed up for party mode starting.
 - 21-06-2006 changed: ControlGroup(id).HasFocus() returns true if the current control is in that controlgroup.
 - 21-06-2006 fixed: Alignment of right items in listcontrolex
 - 21-06-2006 changed: <onclick> based on Skin variables should use the same format as the <label> tag - $INFO[Skin.String(blah)]
 - 21-06-2006 updated: ControlImage and ControlTextbox to accept keyword arguments. (matches other controls)