@@ -115,6 +115,24 @@
     <onup>413</onup>
     <ondown>414</ondown>
    </control>
+   <control>
+	  <description>Create folder button</description>
+	  <type>button</type>
+	  <id>415</id>
+	  <posx>400</posx>
+	  <posy>140</posy>
+	  <width>90</width>
+	  <height>32</height>
+	  <align>center</align>
+	  <label>119</label>
+	  <font>font10</font>
+	  <texturenofocus>keyboard-btn-backspace.png</texturenofocus>
+	  <texturefocus>keyboard-btn-backspace-focus.png</texturefocus>
+	  <onleft>450</onleft>
+	  <onright>413</onright>
+	  <onup>414</onup>
+	  <ondown>415</ondown>
+	</control>
 
   </controlgroup>
 
